fixed the image alignment of swimming holes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,15 +12,6 @@ a {
   color: #00B7FF;
 }
 
-.hero h1 {
-  text-align: center;
-  vertical-align: middle;
-  /*font-weight: bolder;*/
-  font-size: 105px;
-  color: #171C3B;
-  line-height: 450px;
-}
-
 li a:hover {
   color: #a2c7c8;
 }
@@ -55,17 +46,6 @@ footer {
   padding-left: 0.5%;
 }
 
-.nav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background: linear-gradient(#2E4062, #121422);
-  list-style-type: none;
-  border: 3px solid #000;
-  white-space: nowrap;
-}
-
 textarea {
   width: 65%;
   height: 100px;
@@ -75,6 +55,17 @@ textarea {
   font-size: 14px;
   text-align: center;
   margin-bottom: 5%;
+}
+
+.nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background: linear-gradient(#2E4062, #121422);
+  list-style-type: none;
+  border: 3px solid #000;
+  white-space: nowrap;
 }
 
 .hero {
@@ -133,6 +124,15 @@ textarea {
   margin-bottom: 50px;
 }
 
+.hero h1 {
+  text-align: center;
+  vertical-align: middle;
+  /*font-weight: bolder;*/
+  font-size: 105px;
+  color: #171C3B;
+  line-height: 450px;
+}
+
 .locations {
   font-family: 'Poiret One', cursive;
   font-size: 40px;
@@ -177,11 +177,11 @@ textarea {
 }
 
 .specificImage {
-  /*float: right;*/
+  float: right;
   margin-bottom: 30px;
-  position: absolute;
-  right: 1%;
-  height: 100px;
+  /*position: absolute;*/
+  /*right: 1%;*/
+  /*height: 100px;*/
   width:40%;
 }
 
@@ -192,7 +192,7 @@ textarea {
 
 .summary {
   display: inline-block;
-  margin: 8% 15%;
+  margin:0 10% 10% 10%;
   font-size: 18px;
 }
 
